Wokring on verbal communication

--- a/aalto.bib
+++ b/aalto.bib
@@ -737,6 +737,19 @@
   number = {4}
 }
 
+@book{croninTranslationDigitalAge2012,
+  title = {Translation in the {{Digital Age}}},
+  author = {Cronin, Michael},
+  year = {2012},
+  month = nov,
+  edition = {First},
+  publisher = {{Routledge}},
+  doi = {10.4324/9780203073599},
+  file = {/home/avnerus/Zotero/storage/3S3ZSRJ3/Cronin - 2012 - Translation in the Digital Age.pdf},
+  isbn = {978-0-203-07359-9},
+  language = {en}
+}
+
 @article{cuervoMerleauPontyThesisVertical2013,
   title = {Merleau-{{Ponty}} and the {{Thesis}} of {{Vertical Being}}-in-the-{{World}}:},
   shorttitle = {Merleau-{{Ponty}} and the {{Thesis}} of {{Vertical Being}}-in-the-{{World}}},
@@ -1105,6 +1118,14 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   year = {2012},
   pages = {199--208},
   publisher = {{Springer}}
+}
+
+@article{fischerVideoConferencingTransregional,
+  title = {Video Conferencing in a Transregional Research Cooperation: {{Turn}}-taking in a New Medium},
+  author = {Fischer, Kerstin and Tenbrink, Thora},
+  pages = {17},
+  file = {/home/avnerus/Zotero/storage/WKJL37ET/Fischer and Tenbrink - Video conferencing in a transregional research coo.pdf},
+  language = {en}
 }
 
 @book{forsterMachineStops2015,
@@ -1482,6 +1503,21 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   number = {2}
 }
 
+@inproceedings{hasegawaTelepresenceRobotThat2014,
+  title = {Telepresence Robot That Exaggerates Non-Verbal Cues for Taking Turns in Multi-Party Teleconferences},
+  booktitle = {Proceedings of the Second International Conference on {{Human}}-Agent Interaction - {{HAI}} '14},
+  author = {Hasegawa, Komei and Nakauchi, Yasushi},
+  year = {2014},
+  pages = {293--296},
+  publisher = {{ACM Press}},
+  address = {{Tsukuba, Japan}},
+  doi = {10.1145/2658861.2658945},
+  abstract = {In this paper, we propose a telepresence robot that exaggerates non-verbal cues for taking turns in multiparty teleconferences. In multi-party teleconferences, it is more difficult that the remote participants to take their turns than face-to-face. Therefore, it is assumed that the remote participants' turns are tended to decrease. It is said that addressee tends to be next speaker. Therefore, becoming addressee is previous step to become speaker and take turns. In order to make remote participant become addressee, proposed system recognized remote participant's non-verbal cues such as attention directions, nod motions and backchannels. Then, the system exaggerates the cues and expresses them as the telepresence robot's motions.},
+  file = {/home/avnerus/Zotero/storage/DWR7VSMP/Hasegawa and Nakauchi - 2014 - Telepresence robot that exaggerates non-verbal cue.pdf},
+  isbn = {978-1-4503-3035-0},
+  language = {en}
+}
+
 @incollection{haslerOnlineIntergroupContact2013,
   title = {Online {{Intergroup Contact}}},
   booktitle = {The {{Social Net}}},
@@ -1783,6 +1819,14 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   series = {Blackwell Companions to Philosophy}
 }
 
+@article{hovyCanYouTranslate,
+  title = {Can {{You Translate}} That into {{Man}}? {{Commercial Machine Translation Systems Include Stylistic Biases}}},
+  author = {Hovy, Dirk and Bianchi, Federico and Fornaciari, Tommaso},
+  pages = {5},
+  file = {/home/avnerus/Zotero/storage/ISGQTFGT/Hovy et al. - Can You Translate that into Man Commercial Machin.pdf},
+  language = {en}
+}
+
 @inproceedings{hughesHumanSurrogatesRemote2014,
   title = {Human {{Surrogates}}: {{Remote Presence}} for {{Collaboration}} and {{Education}} in {{Smart Cities}}},
   shorttitle = {Human {{Surrogates}}},
@@ -1953,7 +1997,7 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
 @inproceedings{jorgensenAppealPerceivedNaturalness2018,
   title = {Appeal and {{Perceived Naturalness}} of a {{Soft Robotic Tentacle}}},
   booktitle = {Companion of the 2018 {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}}},
-  author = {J\o rgensen, Jonas},
+  author = {J{\o}rgensen, Jonas},
   year = {2018},
   month = mar,
   pages = {139--140},
@@ -1967,7 +2011,7 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
 
 @phdthesis{jorgensenConstructingSoftRobot2019,
   title = {Constructing {{Soft Robot Aesthetics}}. {{Art}}, {{Sensation}}, and {{Materiality}} in {{Practice}}.},
-  author = {J\o rgensen, Jonas},
+  author = {J{\o}rgensen, Jonas},
   year = {2019},
   month = jun,
   file = {/home/avnerus/Zotero/storage/GJSL3RYF/Jørgensen - 2019 - Constructing Soft Robot Aesthetics. Art, Sensation.pdf}
@@ -1975,7 +2019,7 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
 
 @article{jorgensenProlegomenaTransdisciplinaryInvestigation2017,
   title = {Prolegomena for a {{Transdisciplinary Investigation Into}} the {{Materialities}} of {{Soft Systems}}},
-  author = {J\o rgensen, Jonas},
+  author = {J{\o}rgensen, Jonas},
   year = {2017},
   journal = {Prolegomena}
 }
@@ -2346,7 +2390,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 
 @article{kramerFacetofaceCommunicationInternet,
   title = {Face-to-Face {{Communication Over}} the {{Internet}}},
-  author = {Kra\textasciidieresis mer, Nicole C and Kappas, Arvid},
+  author = {Kra{\textasciidieresis}mer, Nicole C and Kappas, Arvid},
   pages = {310},
   file = {/home/avnerus/Zotero/storage/VAFVZVJ5/Kra¨mer and Kappas - Face-to-face Communication Over the Internet.pdf},
   language = {en}
@@ -2554,6 +2598,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   publisher = {{A\&C Black}},
   file = {/home/avnerus/Zotero/storage/FZDXN8WL/(Athlone Contemporary European Thinkers) Gerald Moore, Stuart Elden, Henri Lefebvre - Rhythmanalysis_ Space, Time and Everyday Life -Continuum (2004).pdf},
   isbn = {0-8264-7299-0}
+}
+
+@article{lehman-wilzigTowerBabelVs2000,
+  title = {The {{Tower}} of {{Babel}} vs the Power of Babble: Future Political, Economic and Cultural Consequences of Synchronous, Automated Translation Systems ({{SATS}})},
+  author = {{Lehman-Wilzig}, Sam},
+  year = {2000},
+  volume = {2},
+  pages = {467--494},
+  publisher = {{Sage Publications}},
+  file = {/home/avnerus/Zotero/storage/LYUS2AML/14614440022225913.pdf},
+  isbn = {1461-4448},
+  journal = {New Media \& Society},
+  number = {4}
 }
 
 @article{lelandMindfulnessStudentSuccess2015,
@@ -3073,6 +3130,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@misc{MultimodalEndofturnPrediction,
+  title = {Multimodal End-of-Turn Prediction in Multi-Party Meetings | {{Proceedings}} of the 2009 International Conference on {{Multimodal}} Interfaces},
+  file = {/home/avnerus/Zotero/storage/L44WC2B6/1647314.html},
+  howpublished = {https://dl.acm.org/doi/abs/10.1145/1647314.1647332},
+  language = {EN}
+}
+
 @article{muriFaceArtTherapy2007,
   title = {Beyond the Face: {{Art}} Therapy and Self-Portraiture},
   shorttitle = {Beyond the Face},
@@ -3315,6 +3379,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   volume = {363},
   pages = {k5033},
   journal = {bmj}
+}
+
+@article{osawaRobotTestBed2020,
+  title = {A {{Robot}} for {{Test Bed Aimed}} at {{Improving Telepresence System}} and {{Evasion}} from {{Discomfort Stimuli}} by {{Online Learning}}},
+  author = {Osawa, Masahiko and Imai, Michita},
+  year = {2020},
+  month = jan,
+  volume = {12},
+  pages = {187--199},
+  issn = {1875-4805},
+  doi = {10.1007/s12369-019-00551-w},
+  abstract = {This study contributes to improving the comfort of telepresence communication by adaptations to people. We developed a handheld telepresence robot comprised of a binaural microphone and a head mounted display as a test bed and conducted surveys on unpleasantness caused by special devices in use. We found that numerous people experienced an increase in unpleasant sound when the binaural microphone was being used. It was also found that types of unpleasant stimuli differed from person to person. Furthermore, we propose an automatic unpleasant stimuli avoidance system using online machine learning architecture constructed from echo state networks (ESNs) and Accumulator Based Arbitration Models (ABAMs) that can also flexibly adapt to remote users. Because the handheld telepresence robot can avoid unpleasant stimuli before remote users experience these stimuli, it provides them with a more comfortable communication environment while notifying people around the robot that uncomfortable stimulation is being avoided.},
+  file = {/home/avnerus/Zotero/storage/SRG8QZ76/Osawa and Imai - 2020 - A Robot for Test Bed Aimed at Improving Telepresen.pdf},
+  journal = {International Journal of Social Robotics},
+  language = {en},
+  number = {1}
 }
 
 @article{osullivanReconceptualizingFlamingOther2003,
@@ -3774,6 +3854,17 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {11}
 }
 
+@article{rozmyslowiczMachineTranslationProblem2014,
+  title = {Machine {{Translation}}: {{A Problem}} for {{Translation Theory}}},
+  author = {Rozmyslowicz, Tomasz},
+  year = {2014},
+  pages = {19},
+  abstract = {This paper argues that machine translation has so far not been identified as a translation theoretical problem. It further argues that this is not accidental but a symptom of certain theoretical and methodological predispositions. These refer to normative moments in the conceptual foundations of those research paradigms in translation studies that are oriented towards the concepts of agency and culture. The aim of this paper is to problematize these predispositions and propose a conceptual framework in which machine translation can be identified as a problem for translation theory and directed towards possible solutions. It will be shown that the concepts of culture, translator and communication must be newly interrelated in order to secure and justify the object-relation of translation studies in the face of new forms of translation.},
+  file = {/home/avnerus/Zotero/storage/M23V74RT/Rozmyslowicz - 2014 - Machine Translation A Problem for Translation The.pdf},
+  journal = {Machine Translation},
+  language = {en}
+}
+
 @inproceedings{sabanovicPARORobotAffects2013,
   title = {{{PARO}} Robot Affects Diverse Interaction Modalities in Group Sensory Therapy for Older Adults with Dementia},
   booktitle = {2013 {{IEEE}} 13th {{International Conference}} on {{Rehabilitation Robotics}} ({{ICORR}})},
@@ -3902,6 +3993,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   issn = {1873-3360},
   doi = {10.1016/j.psyneuen.2011.12.021},
   abstract = {Romantic relationships can have a profound effect on adults' health and well-being whereas the inability to maintain intimate bonds has been associated with physical and emotional distress. Studies in monogamous mammalian species underscore the central role of oxytocin (OT) in pair-bonding and human imaging studies implicate OT-rich brain areas in early romantic love. To assess the role of OT in romantic attachment, we examined plasma OT in 163 young adults: 120 new lovers (60 couples) three months after the initiation of their romantic relationship and 43 non-attached singles. Twenty-five of the 36 couples who stayed together were seen again six months later. Couples were observed in dyadic interactions and were each interviewed regarding relationship-related thoughts and behaviors. OT was significantly higher in new lovers compared to singles, F(1,152)=109.33, p{$<$}.001, which may suggest increased activity of the oxytocinergic system during the early stages of romantic attachment. These high levels of OT among new lovers did not decrease six months later and showed high individual stability. OT correlated with the couples' interactive reciprocity, including social focus, positive affect, affectionate touch, and synchronized dyadic states, and with anxieties and worries regarding the partner and the relationship, findings which parallel those described for parent-infant bonding. OT levels at the first assessment differentiated couples who stayed together six months later from those who separated during this period. Regression analysis showed that OT predicted interactive reciprocity independent of sex, relationship duration, and the partner's OT. Findings suggest that OT may play an important role at the first stages of romantic attachment and lend support to evolutionary models suggesting that parental and romantic attachment share underlying bio-behavioral mechanisms.},
+  file = {/home/avnerus/Zotero/storage/E2RVEN3W/Schneiderman et al. - 2012 - Oxytocin during the initial stages of romantic att.pdf},
   journal = {Psychoneuroendocrinology},
   keywords = {Adolescent,Adult,Behavior,Courtship,Emotions,Family Characteristics,Female,Humans,Interpersonal Relations,Love,Male,Object Attachment,Oxytocin,Young Adult},
   language = {eng},
@@ -4303,6 +4395,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   isbn = {0815361742}
 }
 
+@article{stanovskyEvaluatingGenderBias2019,
+  title = {Evaluating Gender Bias in Machine Translation},
+  author = {Stanovsky, Gabriel and Smith, Noah A. and Zettlemoyer, Luke},
+  year = {2019},
+  journal = {arXiv preprint arXiv:1906.00591}
+}
+
 @article{steuerDefiningVirtualReality1992,
   title = {Defining {{Virtual Reality}}: {{Dimensions Determining Telepresence}}},
   shorttitle = {Defining {{Virtual Reality}}},
@@ -4611,6 +4710,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   year = {2017},
   publisher = {{MIT press}},
   isbn = {0-262-52936-X}
+}
+
+@inproceedings{vazquezRobotAutonomyGroup2017,
+  title = {Towards {{Robot Autonomy}} in {{Group Conversations}}: {{Understanding}} the {{Effects}} of {{Body Orientation}} and {{Gaze}}},
+  shorttitle = {Towards {{Robot Autonomy}} in {{Group Conversations}}},
+  booktitle = {2017 12th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}}},
+  author = {V{\'a}zquez, Marynel and Carter, Elizabeth J. and McDorman, Braden and Forlizzi, Jodi and Steinfeld, Aaron and Hudson, Scott E.},
+  year = {2017},
+  month = mar,
+  pages = {42--52},
+  issn = {2167-2148},
+  abstract = {We conducted a 2 \texttimes{} 2 between-subjects experiment to examine the effects of two orientation and two gaze behaviors during group conversations for a mobile, low degree-of-freedom robot. For this experiment, we designed a novel protocol to induce changes in the robot's group and study different social contexts. In addition, we implemented a perception system to track participants and control the robot's orientation and gaze with little human intervention. The results showed that the gaze behaviors under consideration affected the participants' perception of the robot's motion and that its motion affected human perception of its gaze. This mutual dependency implies that robot gaze and body motion must be designed and controlled jointly, rather than independently of each other. Moreover, the orientation behaviors that we studied led to similar feelings of inclusion and sense of belonging to the robot's group, suggesting that both can be primitives for more complex orientation behaviors.},
+  file = {/home/avnerus/Zotero/storage/NV9ZXYHU/Vázquez et al. - 2017 - Towards Robot Autonomy in Group Conversations Und.pdf;/home/avnerus/Zotero/storage/TTXE7ZQN/8534835.html},
+  keywords = {body motion,body orientation,complex orientation behaviors,Gaze,gaze behaviors,gesture recognition,group conversations,human intervention,human perception,human-robot interaction,Human-robot interaction,humanoid robots,Navigation,perception system,Protocols,robot autonomy,robot gaze,Robot kinematics,Robot motion,Robot Motion,Robot sensing systems,robot vision,social contexts,Social Human-Robot Interaction}
 }
 
 @misc{verbeekTechnofleshPhenomenologyHumanrobot2016,
