Working on verbal communication

--- a/aalto.bib
+++ b/aalto.bib
@@ -64,6 +64,14 @@
   number = {8}
 }
 
+@article{allenCryptoCircularEconomy,
+  title = {The {{Crypto}}-{{Circular Economy}}},
+  author = {Allen, Darcy WE and Berg, Chris and Potts, Jason},
+  pages = {7},
+  file = {/home/avnerus/Zotero/storage/TURKSM6R/Allen et al. - The Crypto-Circular Economy.pdf},
+  language = {en}
+}
+
 @book{allportNaturePrejudice1954,
   title = {The Nature of Prejudice.},
   author = {Allport, Gordon W},
@@ -747,6 +755,18 @@
   doi = {10.4324/9780203073599},
   file = {/home/avnerus/Zotero/storage/3S3ZSRJ3/Cronin - 2012 - Translation in the Digital Age.pdf},
   isbn = {978-0-203-07359-9},
+  language = {en}
+}
+
+@misc{cryptoeconomicsCryptoCircularEconomy2019,
+  title = {The {{Crypto}}-{{Circular Economy}}},
+  author = {Cryptoeconomics},
+  year = {2019},
+  month = nov,
+  abstract = {By Darcy WE Allen, Chris Berg, and Jason Potts, RMIT Blockchain Innovation Hub},
+  file = {/home/avnerus/Zotero/storage/BJN32JB6/the-crypto-circular-economy-4b0c5820135b.html},
+  howpublished = {https://medium.com/@cryptoeconomics/the-crypto-circular-economy-4b0c5820135b},
+  journal = {Medium},
   language = {en}
 }
 
@@ -1802,6 +1822,21 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   keywords = {Civilization,Reason},
   language = {en},
   lccn = {B3279.H8473 E3 2004}
+}
+
+@article{hossainEmotionRecognitionUsing2019,
+  title = {Emotion Recognition Using Deep Learning Approach from Audio\textendash Visual Emotional Big Data},
+  author = {Hossain, M. Shamim and Muhammad, Ghulam},
+  year = {2019},
+  month = sep,
+  volume = {49},
+  pages = {69--78},
+  issn = {15662535},
+  doi = {10.1016/j.inffus.2018.09.008},
+  abstract = {This paper proposes an emotion recognition system using a deep learning approach from emotional Big Data. The Big Data comprises of speech and video. In the proposed system, a speech signal is first processed in the frequency domain to obtain a Mel-spectrogram, which can be treated as an image. Then this Mel-spectrogram is fed to a convolutional neural network (CNN). For video signals, some representative frames from a video segment are extracted and fed to the CNN. The outputs of the two CNNs are fused using two consecutive extreme learning machines (ELMs). The output of the fusion is given to a support vector machine (SVM) for final classification of the emotions. The proposed system is evaluated using two audio\textendash visual emotional databases, one of which is Big Data. Experimental results confirm the effectiveness of the proposed system involving the CNNs and the ELMs.},
+  file = {/home/avnerus/Zotero/storage/AFUJU5ES/Hossain and Muhammad - 2019 - Emotion recognition using deep learning approach f.pdf},
+  journal = {Information Fusion},
+  language = {en}
 }
 
 @book{houlgateCompanionHegel2011,
@@ -3114,6 +3149,16 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   howpublished = {https://mjirobotics.co.jp/en/}
 }
 
+@article{monzo-nebotTranslatorsInterpretersAgents2019,
+  title = {Translators and Interpreters as Agents of Diversity. {{Managing}} Myths and Pursuing Justice in Postmonolingual Societies},
+  author = {{Monz{\'o}-Nebot}, Esther},
+  year = {2019},
+  pages = {9},
+  publisher = {{Vernon Press}},
+  isbn = {1622735234},
+  journal = {Translating and Interpreting Justice in a Postmonolingual Age}
+}
+
 @article{moriUncannyValleyField2012,
   title = {The {{Uncanny Valley}} [{{From}} the {{Field}}]},
   author = {Mori, M. and MacDorman, K. F. and Kageki, N.},
@@ -3551,6 +3596,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Smart Materials and Structures},
   language = {en},
   number = {9}
+}
+
+@article{petrjanosovaLanguagesBorderlandsBorders2013,
+  title = {Languages of Borderlands, Borders of Languages: {{Native}} and Foreign Language Use in Intergroup Contact between {{Czechs}} and Their Neighbours},
+  shorttitle = {Languages of Borderlands, Borders of Languages},
+  author = {Petrj{\'a}no{\v s}ov{\'a}, Magda and Leix, Alicja},
+  year = {2013},
+  month = jan,
+  volume = {23},
+  issn = {1337-401X, 1210-3055},
+  doi = {10.2478/s13374-013-0156-y},
+  abstract = {In this article we present a qualitative analysis of empirical findings from an international project on intergroup attitudes and contact in five Central European countries specifically concerning language use. The project concentrated on the interplay of intergroup contact and perception between the members of national groups in the borderlands between the Czech Republic and Austria, Germany, Poland and Slovakia. The open statements analysed here about the contact situations and the ensuing evaluation of the Others were collected as part of an online questionnaire (N=1959). After a short theoretical introduction we reveal the intertwined nature of construing language use: first in each specific borderland, then in the triads speaking together either in the native language of one of the groups (Czechs with Austrians and Germans) or with each speaking their own native languages (Czechs with Poles and Slovaks). Finally we highlight several effects we have observed as a result of being able to compare the situation in more than one neighbourhood, for instance, the effect of the different statuses of the languages involved, or the connection between the language used in contact and a feeling of proximity.},
+  file = {/home/avnerus/Zotero/storage/75REVRX5/Petrjánošová and Leix - 2013 - Languages of borderlands, borders of languages Na.pdf},
+  journal = {Human Affairs},
+  language = {en},
+  number = {4}
 }
 
 @article{pettigrewAllportIntergroupContact2005,
@@ -5089,6 +5150,21 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   publisher = {{Public Library of Science}},
   journal = {PloS one},
   number = {10}
+}
+
+@inproceedings{zhangMultimodalDeepConvolutional2016,
+  title = {Multimodal {{Deep Convolutional Neural Network}} for {{Audio}}-{{Visual Emotion Recognition}}},
+  booktitle = {Proceedings of the 2016 {{ACM}} on {{International Conference}} on {{Multimedia Retrieval}} - {{ICMR}} '16},
+  author = {Zhang, Shiqing and Zhang, Shiliang and Huang, Tiejun and Gao, Wen},
+  year = {2016},
+  pages = {281--284},
+  publisher = {{ACM Press}},
+  address = {{New York, New York, USA}},
+  doi = {10.1145/2911996.2912051},
+  abstract = {Emotion recognition is a challenging task because of the emotional gap between subjective emotion and the low-level audio-visual features. Inspired by the recent success of deep learning in bridging the semantic gap, this paper proposes to bridge the emotional gap based on a multimodal Deep Convolution Neural Network (DCNN), which fuses the audio and visual cues in a deep model. This multimodal DCNN is trained with two stages. First, two DCNN models pretrained on large-scale image data are fine-tuned to perform audio and visual emotion recognition tasks respectively on the corresponding labeled speech and face data. Second, the outputs of these two DCNNs are integrated in a fusion network constructed by a number of fully-connected layers. The fusion network is trained to obtain a joint audio-visual feature representation for emotion recognition. Experimental results on the RML audio-visual database demonstrates the promising performance of the proposed method. To the best of our knowledge, this is an early work fusing audio and visual cues in DCNN for emotion recognition. Its success guarantees further research in this direction.},
+  file = {/home/avnerus/Zotero/storage/6B4I2RSP/Zhang et al. - 2016 - Multimodal Deep Convolutional Neural Network for A.pdf},
+  isbn = {978-1-4503-4359-6},
+  language = {en}
 }
 
 @article{zhaoTaxonomyCopresence2003,
