About cloned voice, added TODO

--- a/aalto.bib
+++ b/aalto.bib
@@ -1996,6 +1996,38 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   number = {1}
 }
 
+@article{jiaDirectSpeechtospeechTranslation2019,
+  title = {Direct Speech-to-Speech Translation with a Sequence-to-Sequence Model},
+  author = {Jia, Ye and Weiss, Ron J. and Biadsy, Fadi and Macherey, Wolfgang and Johnson, Melvin and Chen, Zhifeng and Wu, Yonghui},
+  year = {2019},
+  month = jun,
+  abstract = {We present an attention-based sequence-to-sequence neural network which can directly translate speech from one language into speech in another language, without relying on an intermediate text representation. The network is trained end-to-end, learning to map speech spectrograms into target spectrograms in another language, corresponding to the translated content (in a different canonical voice). We further demonstrate the ability to synthesize translated speech using the voice of the source speaker. We conduct experiments on two Spanish-to-English speech translation datasets, and find that the proposed model slightly underperforms a baseline cascade of a direct speech-to-text translation model and a text-to-speech synthesis model, demonstrating the feasibility of the approach on this very challenging task.},
+  archivePrefix = {arXiv},
+  eprint = {1904.06037},
+  eprinttype = {arxiv},
+  file = {/home/avnerus/Zotero/storage/JJ97ZN4L/Jia et al. - 2019 - Direct speech-to-speech translation with a sequenc.pdf},
+  journal = {arXiv:1904.06037 [cs, eess]},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  language = {en},
+  primaryClass = {cs, eess}
+}
+
+@article{jiaTransferLearningSpeaker2019,
+  title = {Transfer {{Learning}} from {{Speaker Verification}} to {{Multispeaker Text}}-{{To}}-{{Speech Synthesis}}},
+  author = {Jia, Ye and Zhang, Yu and Weiss, Ron J. and Wang, Quan and Shen, Jonathan and Ren, Fei and Chen, Zhifeng and Nguyen, Patrick and Pang, Ruoming and Moreno, Ignacio Lopez and Wu, Yonghui},
+  year = {2019},
+  month = jan,
+  abstract = {We describe a neural network-based system for text-to-speech (TTS) synthesis that is able to generate speech audio in the voice of different speakers, including those unseen during training. Our system consists of three independently trained components: (1) a speaker encoder network, trained on a speaker verification task using an independent dataset of noisy speech without transcripts from thousands of speakers, to generate a fixed-dimensional embedding vector from only seconds of reference speech from a target speaker; (2) a sequence-to-sequence synthesis network based on Tacotron 2 that generates a mel spectrogram from text, conditioned on the speaker embedding; (3) an auto-regressive WaveNet-based vocoder network that converts the mel spectrogram into time domain waveform samples. We demonstrate that the proposed model is able to transfer the knowledge of speaker variability learned by the discriminatively-trained speaker encoder to the multispeaker TTS task, and is able to synthesize natural speech from speakers unseen during training. We quantify the importance of training the speaker encoder on a large and diverse speaker set in order to obtain the best generalization performance. Finally, we show that randomly sampled speaker embeddings can be used to synthesize speech in the voice of novel speakers dissimilar from those used in training, indicating that the model has learned a high quality speaker representation.},
+  archivePrefix = {arXiv},
+  eprint = {1806.04558},
+  eprinttype = {arxiv},
+  file = {/home/avnerus/Zotero/storage/7LTEC4FM/Jia et al. - 2019 - Transfer Learning from Speaker Verification to Mul.pdf},
+  journal = {arXiv:1806.04558 [cs, eess]},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  language = {en},
+  primaryClass = {cs, eess}
+}
+
 @article{johnsonAngerFlamingComputermediated2009,
   title = {Anger and Flaming in Computer-Mediated Negotiation among Strangers},
   author = {Johnson, Norman A. and Cooper, Randolph B. and Chin, Wynne W.},
@@ -2622,6 +2654,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   abstract = {A novel linear actuator called origami-based vacuum pneumatic artificial muscle (OV-PAM) is proposed in this study that can produce large forces ({$>$}400 N) with a contraction ratio {$>$}90\% of the active length of the actuator. Moreover, some of the designs presented in this article can lift large loads with large contraction ratios at extremely low vacuum pressure (\&10 kPa). This actuator consists of a sealed origami film chamber connecting a polygonal top and bottom plate with evenly spaced transversal reinforcements that prevent the chamber from contracting laterally at certain points of the actuator under vacuum pressure. As vacuum pressure is applied, both a tension force in the walls and a vertical force on the bottom plate of the actuator generate a large contractile force, and the force on the bottom plate can produce a consistent force throughout the entire motion. A quasistatic analytical model was developed that can accurately predict the behavior of the actuator and that can be used for actuator design. OV-PAMs are lightweight, have large contractile forces throughout their entire motion and large contraction ratios. It can also produce large forces at low pressures with large cross-sectional areas. Their versatility could make them well suited for a wide range of applications. They could take us closer to a future where robots can cooperate with humans to shape a better future.},
   file = {/home/avnerus/Zotero/storage/YKSND6LV/Lee and Rodrigue - 2019 - Origami-Based Vacuum Pneumatic Artificial Muscles .pdf},
   journal = {Soft Robotics},
+  language = {en},
+  number = {1}
+}
+
+@article{leeSocialPsychologicalOriginsFeelings2005,
+  title = {Social-{{Psychological Origins}} of {{Feelings}} of {{Presence}}: {{Creating Social Presence With Machine}}-{{Generated Voices}}},
+  shorttitle = {Social-{{Psychological Origins}} of {{Feelings}} of {{Presence}}},
+  author = {Lee, Kwan-Min and Nass, Clifford},
+  year = {2005},
+  month = feb,
+  volume = {7},
+  pages = {31--45},
+  issn = {1521-3269, 1532-785X},
+  doi = {10.1207/S1532785XMEP0701_2},
+  file = {/home/avnerus/Zotero/storage/PPTKRLZG/Lee and Nass - 2005 - Social-Psychological Origins of Feelings of Presen.pdf},
+  journal = {Media Psychology},
   language = {en},
   number = {1}
 }
